--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react": "^17.0.3",
     "firebase-admin": "^9.6.0",
     "next": "^10.1.3",
+    "npm-run-all": "^4.1.5",
     "typescript": "^4.2.3"
   }
 }
