--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fluido/nextjs-utils",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Fluido nextjs utils",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -22,20 +22,19 @@
     "pub:all": "run-s build pub"
   },
   "dependencies": {
-    "@fluido/react-utils": "^0.3.3",
+    "@fluido/react-utils": "^0.4.1",
     "cookie": "^0.4.1",
     "cors": "^2.8.5",
     "deep-equal": "^2.0.5",
-    "deepmerge": "^4.2.2",
-    "express-json-validator-middleware": "^2.1.1"
+    "deepmerge": "^4.2.2"
   },
   "peerDependencies": {
     "firebase-admin": "^9.11.0",
     "next": "^11.0.1"
   },
   "devDependencies": {
-    "@types/node": "^16.3.3",
-    "@types/react": "^17.0.14",
+    "@types/node": "^16.4.11",
+    "@types/react": "^17.0.15",
     "firebase-admin": "^9.11.0",
     "next": "^11.0.1",
     "npm-run-all": "^4.1.5",
